thay doi trang home.html

--- a/Home.html
+++ b/Home.html
@@ -36,9 +36,9 @@
                         HỆ THỐNG ĐIỀU KHIỂN VÀ GIÁM SÁT DÂY CHUYỀN SẢN XUẤT MỦ CAO SU
                     </h1>
                     <div class="background">
-                        <!-- <button  onclick="Test()" >abc</button> -->
-                        <!-- <a id="san-rung-btn" class="btn-common">SÀN RUNG</a>
-                        <a id="buong-say-btn" class="btn-common"> BUỒNG SẤY </a> -->
+                        <button  onclick="Test()" >abc</button>
+                        <a id="san-rung-btn" class="btn-common">SÀN RUNG</a>
+                        <a id="buong-say-btn" class="btn-common"> BUỒNG SẤY </a>
                         <!-- <a id="bom-com-btn" class="btn-common"> BƠM CỐM </a> -->
                     
                         <button class="testcode" onclick="BOMCOM()">BƠM CỐM </button> 
