--- a/IO.html
+++ b/IO.html
@@ -5,6 +5,7 @@
 <!-- AWP_In_Variable Name='"Data".Data4' -->
 <!-- AWP_In_Variable Name='"Data".Data5' -->
 <!-- AWP_In_Variable Name='"Data".Data6' -->
+<!-- AWP_In_Variable Name='"Data".Data7' -->
 {
     "m200_0":":=M200.0:",
     "q0_1":":=Q0.1:",
@@ -15,5 +16,6 @@
     "data3":":="Data".Data3:",
     "data4":":="Data".Data4:",
     "data5":":="Data".Data5:",
-    "data6":":="Data".Data6:"
+    "data6":":="Data".Data6:",
+    "data7":":="Data".Data7:"
 }
